--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,27 @@
+# Logs
+logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+lerna-debug.log*
+
+# Editor directories and files
+.vscode/*
+!.vscode/extensions.json
+.idea
+.DS_Store
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
+
+# Ignore local development files
+.DS_Store
+
+# Ignore Python-related files
 .venv/
 __pycache__/
 *.pyc
@@ -8,3 +32,9 @@ __pycache__/
 *.db
 *.sqlite3
 .env
+
+# Ignore Vite/React-related files
+node_modules/
+/dist/
+/dist-ssr/
+*.local
